--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-runtime": "^6.0.0",
     "core-js": "^3.6.4",
     "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
