--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonp": "^0.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
