--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-runtime": "^6.0.0",
     "core-js": "^3.6.4",
     "fastclick": "^1.0.6",
