--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "better-scroll": "^1.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
